--- a/dark.css
+++ b/dark.css
@@ -61,3 +61,17 @@ body{
 .card .text-muted{
     color: #aaa !important;
 }
+
+.cursor-list-item {
+    background-color: #3a3a3a !important;
+    color: white;
+}
+
+#previewCanvas {
+    border-color: #555 !important;
+}
+
+pre {
+    background-color: #2b2b2b !important;
+    color: #e0e0e0;
+}
