--- a/dark.css
+++ b/dark.css
@@ -6,7 +6,7 @@ body{
     transition: background-color 0.5s ease;
 }
 
-#cursorDiv{
+.cursorDiv{
     height: 50px;
     width: 150px;
     background-color: black;
@@ -78,5 +78,13 @@ pre {
 
 #generatedJson {
     background-color: #2b2b2b !important;
+    color: white !important;
+}
+
+.cursor-separator {
+    border-color: #555 !important;
+}
+
+.cursor-separator h5 {
     color: white !important;
 }
