--- a/dark.css
+++ b/dark.css
@@ -62,11 +62,6 @@ body{
     color: #aaa !important;
 }
 
-.cursor-list-item {
-    background-color: #3a3a3a !important;
-    color: white;
-}
-
 #previewCanvas {
     border-color: #555 !important;
 }
@@ -87,4 +82,15 @@ pre {
 
 .cursor-separator h5 {
     color: white !important;
+}
+
+#selectedCursorDisplay {
+    background-color: #1a3a52 !important;
+    border-color: #0078ff !important;
+    color: #66b3ff !important;
+}
+
+.cursor-preview {
+    background-color: rgba(0, 0, 0, 0.3) !important;
+    border-color: #555 !important;
 }
